force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Adobe_Sign_OAuth_Scope__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Adobe_Sign_OAuth_Scope__c</fullName>
    <description>OAuth scope value</description>
    <inlineHelpText>OAuth scope value</inlineHelpText>
    <label>Adobe Acrobat Sign OAuth Scope</label>
    <length>16</length>
    <type>Text</type>
</CustomField>