force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Allow_Delegated_Sending__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Allow_Delegated_Sending__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to allow sending agreements on behalf of other users.</description>
    <inlineHelpText>Enable this setting to allow sending agreements on behalf of other users.</inlineHelpText>
    <label>Allow Sending On Behalf of Others</label>
    <type>Checkbox</type>
</CustomField>