force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Callback_URL_Agreement_Notification__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Callback_URL_Agreement_Notification__c</fullName>
    <description>This setting is the Secure Web Address copied from the Adobe Acrobat Sign Callback Site which is set up for push agreement feature. Follow instructions in the installation and configuration guide.(Deprecated)</description>
    <inlineHelpText>This setting is the Secure Web Address copied from the Adobe Acrobat Sign Callback Site which is set up for push agreement feature. Follow instructions in the installation and configuration guide.(Deprecated)</inlineHelpText>
    <label>Deprecated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>