force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Create_Sign_Deadline_Reminder_Event__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Create_Sign_Deadline_Reminder_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to display Salesforce alerts reminding users when the agreements sent are about to expire. Specify the number of days before agreement expiration that the alert is shown in the Days Sign Deadline Reminder Event setting.</description>
    <inlineHelpText>Enable this setting to display Salesforce alerts reminding users when the agreements sent are about to expire. Specify the number of days before agreement expiration that the alert is shown in the Days Sign Deadline Reminder Event setting.</inlineHelpText>
    <label>Create Sign Deadline Reminder Event</label>
    <type>Checkbox</type>
</CustomField>