force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Days_Sign_Deadline_Reminder_Event__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Days_Sign_Deadline_Reminder_Event__c</fullName>
    <description>Enter a number of days and enable the Create Deadline Reminder Event setting. This allows ‘agreement about-to-expire alerts’ to be shown to your users in Salesforce. Alerts are shown the specified number of days before agreement expiration.</description>
    <inlineHelpText>Enter a number of days and enable the Create Deadline Reminder Event setting. This allows ‘agreement about-to-expire alerts’ to be shown to your users in Salesforce. Alerts are shown the specified number of days before agreement expiration.</inlineHelpText>
    <label>Days Sign Deadline Reminder Event</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>