force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Disable_Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Disable_Account_Lookup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to hide the account lookup option for draft agreements.</description>
    <inlineHelpText>Enable this setting to hide the account lookup option for draft agreements.</inlineHelpText>
    <label>Hide Account Lookup</label>
    <type>Checkbox</type>
</CustomField>