force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Disable_Agreement_Chatter_Feed__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Disable_Agreement_Chatter_Feed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to turn off the Chatter feed on the Agreement object.</description>
    <inlineHelpText>Enable this setting to turn off the Chatter feed on the Agreement object.</inlineHelpText>
    <label>Disable Agreement Chatter Feed</label>
    <type>Checkbox</type>
</CustomField>