force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Disable_Attach_Agreement_Attachments__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Disable_Attach_Agreement_Attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to hide the option to add Salesforce Documents to draft agreements.</description>
    <inlineHelpText>Enable this setting to hide the option to add Salesforce Documents to draft agreements.</inlineHelpText>
    <label>Hide Salesforce Documents Attachments</label>
    <type>Checkbox</type>
</CustomField>