force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Disable_Cc__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Disable_Cc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to hide the &apos;Send email copies to:&apos; field for draft agreements.</description>
    <inlineHelpText>Enable this setting to hide the &apos;Send email copies to:&apos; field for draft agreements.</inlineHelpText>
    <label>Hide Send Email Copies</label>
    <type>Checkbox</type>
</CustomField>