force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Disable_Contact_Recipient_Type__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Disable_Contact_Recipient_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This setting controls whether users can use Contact records as Recipients on Agreements.</description>
    <inlineHelpText>This setting controls whether users can use Contact records as Recipients on Agreements.</inlineHelpText>
    <label>Disable Contact Recipient Type</label>
    <type>Checkbox</type>
</CustomField>