force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Disable_Edit_Agreement_Attachments__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Disable_Edit_Agreement_Attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to hide the edit option for attachments associated with draft agreements.</description>
    <inlineHelpText>Enable this setting to hide the edit option for attachments associated with draft agreements.</inlineHelpText>
    <label>Hide Edit Agreement Attachments</label>
    <type>Checkbox</type>
</CustomField>