force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Disable_Knowledge_Based_Authentication__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Disable_Knowledge_Based_Authentication__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable this setting to hide the Knowledge Based Authentication (KBA) option for agreements. Powered by RSA, KBA requires signers to provide and verify personal information to sign the document. Usage of this feature is limited and may incur added costs.</description>
    <inlineHelpText>Enable this setting to hide the Knowledge Based Authentication (KBA) option for agreements. Powered by RSA, KBA requires signers to provide and verify personal information to sign the document. Usage of this feature is limited and may incur added costs.</inlineHelpText>
    <label>Disable Knowledge Based Authentication</label>
    <type>Checkbox</type>
</CustomField>