force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Disable_Layer_Attachments__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Disable_Layer_Attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to hide the link which allows senders to &quot;Add Form Field Template&quot; on draft documents.</description>
    <inlineHelpText>Enable this setting to hide the link which allows senders to &quot;Add Form Field Template&quot; on draft documents.</inlineHelpText>
    <label>Hide Ability to Add Field Templates</label>
    <type>Checkbox</type>
</CustomField>