force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Disable_Preview_Position__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Disable_Preview_Position__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to hide the preview or position option for draft agreements.</description>
    <inlineHelpText>Enable this setting to hide the preview or position option for draft agreements.</inlineHelpText>
    <label>Hide Preview or Position</label>
    <type>Checkbox</type>
</CustomField>