force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Disable_Private_Message__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Disable_Private_Message__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to prevent users from setting a private message for recipients.</description>
    <inlineHelpText>Enable this setting to prevent users from setting a private message for recipients.</inlineHelpText>
    <label>Disable Private Message</label>
    <type>Checkbox</type>
</CustomField>