force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Disable_Replace_Signer__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Disable_Replace_Signer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to hide the ability to replace the current signer or approver after the agreement has been sent.</description>
    <inlineHelpText>Enable this setting to hide the ability to replace the current signer or approver after the agreement has been sent.</inlineHelpText>
    <label>Hide Replace Signer</label>
    <type>Checkbox</type>
</CustomField>