force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Disable_Sign_Password__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Disable_Sign_Password__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to hide the signing password option.</description>
    <inlineHelpText>Enable this setting to hide the signing password option.</inlineHelpText>
    <label>Hide Signing Password</label>
    <type>Checkbox</type>
</CustomField>