force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Disable_Signature_Type__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Disable_Signature_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to hide the signature type option for draft agreements.</description>
    <inlineHelpText>Enable this setting to hide the signature type option for draft agreements.</inlineHelpText>
    <label>Hide Signature Type</label>
    <type>Checkbox</type>
</CustomField>