force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Disable_Sort_Attachments__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Disable_Sort_Attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to hide the sort attachments option for draft agreements.</description>
    <inlineHelpText>Enable this setting to hide the sort attachments option for draft agreements.</inlineHelpText>
    <label>Hide Reorder Attachments</label>
    <type>Checkbox</type>
</CustomField>