force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Disable_Upload_Agreement_Attachments__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Disable_Upload_Agreement_Attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to hide or disable the option to upload local files for draft agreements.</description>
    <inlineHelpText>Enable this setting to hide or disable the option to upload local files for draft agreements.</inlineHelpText>
    <label>Hide Upload Agreement Attachments</label>
    <type>Checkbox</type>
</CustomField>