force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Disable_User_Provisioning__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Disable_User_Provisioning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to prevent users from being auto-provisioned with an Adobe user account when they send or manage agreements. This setting does not prevent auto-provisioning of users that occurs when Update Agreement is clicked from the Agreement list.</description>
    <inlineHelpText>Enable this setting to prevent users from being auto-provisioned with an Adobe user account when they send or manage agreements. This setting does not prevent auto-provisioning of users that occurs when Update Agreement is clicked from the Agreement list.</inlineHelpText>
    <label>Disable User Provisioning</label>
    <type>Checkbox</type>
</CustomField>