force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Disable_Web_Identity__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Disable_Web_Identity__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Deprecated</description>
    <inlineHelpText>Deprecated</inlineHelpText>
    <label>Deprecated</label>
    <type>Checkbox</type>
</CustomField>