force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Enable_Alternate_Recipient__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Enable_Alternate_Recipient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to allow sender to add alternate recipients</description>
    <inlineHelpText>Enable this setting to allow sender to add alternate recipients</inlineHelpText>
    <label>Enable Alternate Recipients</label>
    <type>Checkbox</type>
</CustomField>