force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Enable_Certified_Recipient_Workflow_Role__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Enable_Certified_Recipient_Workflow_Role__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Recipients marked as certified recipients acknowledge the document. They may be required to enter data into fields.</description>
    <inlineHelpText>Recipients marked as certified recipients acknowledge the document. They may be required to enter data into fields.</inlineHelpText>
    <label>Enable Certified Recipient Role</label>
    <type>Checkbox</type>
</CustomField>