force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Enable_Delegate_Acceptor_Workflow_Role__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Enable_Delegate_Acceptor_Workflow_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Recipients marked as &quot;Delegator to Acceptor&quot; may review the document but can&apos;t accept the document. They need to forward the document to another user who may accept the document.</description>
    <inlineHelpText>Recipients marked as &quot;Delegator to Acceptor&quot; may review the document but can&apos;t accept the document. They need to forward the document to another user who may accept the document.</inlineHelpText>
    <label>Enable Delegate Acceptor Role</label>
    <type>Checkbox</type>
</CustomField>