force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Enable_Delegate_FormFiller_Workflow_Role__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Enable_Delegate_FormFiller_Workflow_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Recipients marked as &quot;Delegator to Form-Filler&quot; may review the document but can&apos;t fill the document. They need to forward the document to another user who may fill the document.</description>
    <inlineHelpText>Recipients marked as &quot;Delegator to Form-Filler&quot; may review the document but can&apos;t fill the document. They need to forward the document to another user who may fill the document.</inlineHelpText>
    <label>Enable Delegate Form Filler Role</label>
    <type>Checkbox</type>
</CustomField>