force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Enable_Digital_Identity_Authentication__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Enable_Digital_Identity_Authentication__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to show Digital Identity authentication option for verifying recipient identity.</description>
    <inlineHelpText>Enable this setting to show Digital Identity authentication option for verifying recipient identity.</inlineHelpText>
    <label>Enable Digital Identity Authentication</label>
    <type>Checkbox</type>
</CustomField>