force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Enable_FormFiller_Workflow_Role__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Enable_FormFiller_Workflow_Role__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Recipients marked as form-fillers fill the document.</description>
    <inlineHelpText>Recipients marked as form-fillers fill the document.</inlineHelpText>
    <label>Enable Form Filler Role</label>
    <type>Checkbox</type>
</CustomField>