force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Enable_Government_ID_Authentication__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Enable_Government_ID_Authentication__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to show the Government ID authentication option for verifying recipient identity. Usage of this feature is limited and may incur added costs.</description>
    <inlineHelpText>Enable this setting to show the Government ID authentication option for verifying recipient identity. Usage of this feature is limited and may incur added costs.</inlineHelpText>
    <label>Enable Government ID Authentication</label>
    <type>Checkbox</type>
</CustomField>