force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Enable_KBA_Required_Name__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Enable_KBA_Required_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to show the Knowledge Based Authentication (KBA) name input option for recipients.</description>
    <inlineHelpText>Enable this setting to show the Knowledge Based Authentication (KBA) name input option for recipients.</inlineHelpText>
    <label>KBA Recipient Name Required</label>
    <type>Checkbox</type>
</CustomField>