force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Enable_Layers_Section__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Enable_Layers_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to show the Adobe Acrobat Sign form field layer templates that will be applied to documents.</description>
    <inlineHelpText>Enable this setting to show the Adobe Acrobat Sign form field layer templates that will be applied to documents.</inlineHelpText>
    <label>Show Adobe Acrobat Sign Field Templates</label>
    <type>Checkbox</type>
</CustomField>