force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Enable_Library_Agreement_Attachments__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Enable_Library_Agreement_Attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to show the option to add Adobe Acrobat Sign document templates.</description>
    <inlineHelpText>Enable this setting to show the option to add Adobe Acrobat Sign document templates.</inlineHelpText>
    <label>Show Acrobat Sign Library Attachments</label>
    <type>Checkbox</type>
</CustomField>