force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Enable_Mapping_Error_Notification__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Enable_Mapping_Error_Notification__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable this setting to send the Salesforce admin email notifications when there are merge mapping or data mapping execution errors.</description>
    <inlineHelpText>Enable this setting to send the Salesforce admin email notifications when there are merge mapping or data mapping execution errors.</inlineHelpText>
    <label>Enable Mapping Error Notification</label>
    <type>Checkbox</type>
</CustomField>