force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Enable_Post_Sign_Options__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Enable_Post_Sign_Options__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this option to take your singers to a landing page of your choice. This makes the ‘Post Sign Redirect URL’ and ‘Post Sign Redirect Delay’ options available for Agreements. Signers of an agreement are redirected to the specified URL after they sign.</description>
    <inlineHelpText>Enable this option to take your singers to a landing page of your choice. This makes the ‘Post Sign Redirect URL’ and ‘Post Sign Redirect Delay’ options available for Agreements. Signers of an agreement are redirected to the specified URL after they sign.</inlineHelpText>
    <label>Enable Post Sign Options</label>
    <type>Checkbox</type>
</CustomField>