force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Enable_Recipient_Approver_Role__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Enable_Recipient_Approver_Role__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Recipients marked as approvers review and approve the document but they are not required to sign it. They may be required to enter data into fields.</description>
    <inlineHelpText>Recipients marked as approvers review and approve the document but they are not required to sign it. They may be required to enter data into fields.</inlineHelpText>
    <label>Enable Recipient Approver Role</label>
    <type>Checkbox</type>
</CustomField>